Fixed agreement label alignment

--- a/app/assets/stylesheets/bootstrap-and-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-and-overrides.css.scss
@@ -122,9 +122,9 @@ div.products {
 	&:hover {
 	    background-color: rgba(255,255,255,1);
 	}
-	h5 { margin-right: -100px; }
     }
 }
+#agreementTable h5 { margin-right: -100px; }
 
 /* =============================================================================
    Extra Defaults
